src/objects/AuditQuestion__c.object
<CustomObject>
    <fields>
        <fullName>AuditQuestionType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuditQuestionType</label>
        <referenceTo>AuditQuestionType__c</referenceTo>
        <relationshipLabel>AuditQuestions</relationshipLabel>
        <relationshipName>AuditQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaximumValue__c</fullName>
        <label>MaximumValue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential__c</fullName>
        <label>Potential</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>AuditQuestion</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Question-{000}</displayFormat>
        <label>AuditQuestion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AuditQuestions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>